--- a/css/interface.css
+++ b/css/interface.css
@@ -1,5 +1,9 @@
 .interface .spinner-holder {
-  position: absolute;
+  position: fixed;
   inset: 0;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.interface .spinner-overlay {
+  margin-top: 100px;
 }
