--- a/css/build.css
+++ b/css/build.css
@@ -1,11 +1,11 @@
-fl-helper[name="code-generator"] .overlay-loading {
+fl-helper[name="ai-feature"] .overlay-loading {
   position: fixed;
   inset: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1000;
 }
 
-fl-helper[name="code-generator"] .overlay-loading p {
+  fl-helper[name="ai-feature"] .overlay-loading p {
   color: #fff;
   position: absolute;
   top: 50%;
